# samples

./: .gitignore  README.md  test.txt  uv-userguide.md
01-tutorials/01-fundamentals/01-first-agent/: .python-version
01-tutorials/01-fundamentals/01-first-agent/02-simple-interactive-usecase/: requirements.txt
01-tutorials/01-fundamentals/09-simple-observability/: .python-version  README.md  recipe_bot.py  requirements.txt
01-tutorials/02-multi-agent-systems/02-swarm-agent/: README.md  requirements.txt  swarm-agent.py
01-tutorials/03-deployment/03-agentcore-deployment/: Dockerfile  main.py  pyproject.toml  requirements.txt
01-tutorials/03-deployment/03-agentcore-deployment/01_runtime/: my_agent.py
01-tutorials/03-deployment/03-agentcore-deployment/agentcore_app/: agent_runtime.py  config.py  gateway.py  main.py  resource_store.py
02-samples/03-aws-assistant-mcp-dev/: aws_cost_assistant.py  aws_documentation_researcher.py  graph_creater.py  main.py  pyproject.toml
02-samples/03-aws-assistant-mcp-dev/errors/: errors.txt
02-samples/03-aws-assistant-mcp-dev/repl_state/: repl_state.pkl
04-UX-demos/05-strands-playground-dev/: README.md  main.py  pyproject.toml
04-UX-demos/05-strands-playground-dev/app/: main.py
04-UX-demos/05-strands-playground-dev/app/sessions/: user1.json
04-UX-demos/05-strands-playground-dev/app/static/: styles.css  tools-panel.js
04-UX-demos/05-strands-playground-f1/app/: README.md  S3_Bucket_Security_Best_Practices.html  aws_data_processing_mcp_server.py  aws_diagram_drawer.py  aws_knowledge_mcp_server.py  main.py  pyproject.toml  response.txt
04-UX-demos/05-strands-playground-f1/app/sessions/: user1.json  user2.json
04-UX-demos/05-strands-playground-f1/app/static/: app.js  index.html  styles.css  tools-panel.js
04-UX-demos/05-strands-playground-f1/app/summaries/: user1.txt
(+8 files in other folders)
