[project]
name = "03-aws-assistant-mcp-dev"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.5"
dependencies = [
    "awslabs-aws-documentation-mcp-server>=0.1.4",
    "arize-otel>=0.9.0",
    "arize-toolkit>=1.0.7",
    "mcp>=1.12.3",
    "strands-agents[openai]>=1.3.0",
    "strands-agents-tools>=0.2.3",
    "openinference-instrumentation-openai>=0.1.30",
    "opentelemetry-exporter-otlp>=1.36.0",
    "python-dotenv>=1.1.1",
    "plotly>=6.2.0",
]
